--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron-builder": "^21.2.0"
   },
   "build": {
+    "productName": "Iris",
     "appId": "to.iris",
     "mac": {
       "category": "public.app-category.social-networking"
