--- a/package.json
+++ b/package.json
@@ -10,14 +10,29 @@
     "gun": "^0.2019.915"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "electron": "^6.0.10",
-    "electron-builder": "^21.2.0"
+    "electron-updater": "^4.1.2",
+    "electron-builder": "^21.2.0",
+    "electron-notarize": "^0.1.1"
   },
   "build": {
     "productName": "Iris",
-    "appId": "to.iris",
+    "appId": "to.iris.electron",
+    "afterSign": "scripts/notarize.js",
     "mac": {
       "category": "public.app-category.social-networking"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
     },
     "publish": {
       "provider": "github"
