--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "description": "Social networking freedom",
   "dependencies": {
-    "gun": "^0.2019.915"
+    "gun": "^0.2019.915",
+    "electron-updater": "^4.1.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
     "electron": "^6.0.10",
-    "electron-updater": "^4.1.2",
     "electron-builder": "^21.2.0",
     "electron-notarize": "^0.1.1"
   },
