--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "Social networking freedom",
   "dependencies": {
     "electron-updater": "^4.2.5",
-    "gun": "^0.2020.520"
+    "gun": "^0.2020.520",
+    "public-ip": "^4.0.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
