--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bonjour": "mmalmi/bonjour",
     "electron-updater": "^4.3.9",
     "gun": "^0.2020.1232",
+    "nat-pmp": "^1.0.0",
     "public-ip": "^4.0.4"
   },
   "devDependencies": {
